--- a/web/index.html
+++ b/web/index.html
@@ -50,6 +50,10 @@
   
   
   
+  
+  
+  
+  
   <style id="splash-screen-style">
     html {
       height: 100%
@@ -58,7 +62,7 @@
     body {
       margin: 0;
       min-height: 100%;
-      background-color: #6600ff;
+      background-color: #6300FF;
           background-size: 100% 100%;
     }
 
@@ -122,6 +126,8 @@
       <source srcset="splash/img/dark-1x.png 1x, splash/img/dark-2x.png 2x, splash/img/dark-3x.png 3x, splash/img/dark-4x.png 4x" media="(prefers-color-scheme: dark)">
       <img class="center" aria-hidden="true" src="splash/img/light-1x.png" alt="">
   </picture>
+  
+  
   
   
   
